Fix spacing

--- a/style.css
+++ b/style.css
@@ -12,11 +12,16 @@ h3 {
 	font-weight: 800;
 }
 
+h1 {
+    margin-bottom: 1px;
+}
+
 p {
 	font-size: 14px;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 400;
-    margin-top: 4px;
+    margin-top: 0;
+    margin-bottom: 4px;
 }
 
 .grid {
